--- a/templates/base.html
+++ b/templates/base.html
@@ -64,12 +64,12 @@
                 <ul class="nav__complementary__list">
                     <li class="nav__complementary__item--facebook">
                         <a href="https://www.facebook.com/iIRCAM" class="btn-icon--facebook" target="_blank">
-                            FB
+                            <i class="icon icon__facebook-f"></i>
                         </a>
                     </li>
                     <li class="nav__complementary__item--twitter">
                         <a href="https://twitter.com/ircam" class="btn-icon--twitter" target="_blank">
-                            TW
+                            <i class="icon icon__twitter"></i>
                         </a>
                     </li>
                     {% if settings.USE_MODELTRANSLATION and languages|length > 1 %}
