--- a/festival/static/scss/config/_variables.scss
+++ b/festival/static/scss/config/_variables.scss
@@ -83,7 +83,7 @@ $header_uppercase        : false;
 ---------------------------------- */
 $footer_background_color : $manifeste16;
 $footer_color            : $white;
-$footer_item_color       : $gray_darker;
+$footer_item_color       : $white;
 
 
 
