--- a/festival/static/scss/modules/hero-slider.scss
+++ b/festival/static/scss/modules/hero-slider.scss
@@ -31,6 +31,8 @@
 
 .hero__slider__name {
     @extend .event__name;
+    font-family: $header_font_family;
+    font-weight: $bold;
     font-size: 3rem;
     line-height: 1;
     a {
