--- a/festival/static/scss/modules/icons.scss
+++ b/festival/static/scss/modules/icons.scss
@@ -100,7 +100,7 @@
 // .icon__photo:before,
 // .icon__image:before,
 // .icon__picture-o:before { content: $fa-var-picture-o; }
-// .icon__pencil:before { content: $fa-var-pencil; }
+.icon__pencil:before { content: $fa-var-pencil; }
 // .icon__map-marker:before { content: $fa-var-map-marker; }
 // .icon__adjust:before { content: $fa-var-adjust; }
 // .icon__tint:before { content: $fa-var-tint; }
