--- a/templates/base.html
+++ b/templates/base.html
@@ -94,9 +94,9 @@
               <li class="hero__slider__item" style="background-image: url({{ event.featured_image_header.url }});">
                   <div class="hero__slider__infos">
                     <div class="container">
-                      <h3 class="hero__slider__name">
+                      <p class="hero__slider__name">
                           <a href="{{ event.get_absolute_url }}">{{ event.title }}</a>
-                      </h3>
+                      </p>
                       {% include "agenda/includes/event_metainfo_slider.html" %}
                     </div>
                   </div>
@@ -204,8 +204,11 @@
             <div class="footer-legals">
                 <p>
                     {# {% trans "Powered by" %} #}
-                    Conception & réalisation :
-                    <a href="http://www.philippebarbosa.com" target="_blank" titre="Développeur front-end freelance & photographe professionnel à Paris">Philippe Barbosa</a>
+                    Conception & réalisation : <br><br>
+                    <a href="http://www.philippebarbosa.com" target="_blank" titre="Développeur front-end freelance & photographe professionnel à Paris">
+                        <img src="http://www.philippebarbosa.com/wp-content/uploads/2015/07/logo.png" alt="" width="30" height="30" style="vertical-align:middle;margin-right: 0.4rem;">
+                        Philippe Barbosa
+                    </a>
                 </p>
             </div>
         </div>
